--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             </section>
           </div>
         </article>
+
+        <article class="about">
+          
+        </article>
       </div>
     </main>
 
