--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <article class="about-us">
           <div class="container">
             <div class="about-us__info">
-              <h2 class="about-us__info-title">we are organic farmfood</h2>
-              <p class="about-us__info-text">ABOUT NATURIX FARMFOOD</p>
+              <h2 class="about-us__info-title"><span>we are</span> organic farmfood</h2>
+              <p class="about-us__info-text">about naturix farmfood</p>
               <p class="about-us__info-desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </div>
             <ul class="about-us__list">
@@ -136,17 +136,17 @@
           <div class="container">
             <ul class="about-farm__list">
               <li class="about-farm__item">
-                <img src="./img/about1.svg" alt="" class="about-farm__item-img">
+                <img src="./img/farm1.svg" alt="" class="about-farm__item-img">
                 <h4 class="about-farm__item-title">organic <strong>fruits</strong></h4>
                 <i class="about-farm__item-text"><span>23</span> items</i>
               </li>
               <li class="about-farm__item">
-                <img src="./img/about2.svg" alt="" class="about-farm__item-img">
+                <img src="./img/farm2.svg" alt="" class="about-farm__item-img">
                 <h4 class="about-farm__item-title">organic <strong>fruits</strong></h4>
                 <i class="about-farm__item-text"><span>23</span> items</i>
               </li>
               <li class="about-farm__item">
-                <img src="./img/about3.svg" alt="" class="about-farm__item-img">
+                <img src="./img/farm3.svg" alt="" class="about-farm__item-img">
                 <h4 class="about-farm__item-title">organic <strong>fruits</strong></h4>
                 <i class="about-farm__item-text"><span>23</span> items</i>
               </li>
@@ -161,23 +161,28 @@
             </div>
             <ul class="about-farm__list">
               <li class="about-farm__item">
-                <img src="./img/about1.svg" alt="" class="about-farm__item-img">
+                <img src="./img/farm4.svg" alt="" class="about-farm__item-img">
                 <h4 class="about-farm__item-title">organic <strong>juices</strong></h4>
                 <i class="about-farm__item-text"><span>23</span> items</i>
               </li>
               <li class="about-farm__item">
-                <img src="./img/about2.svg" alt="" class="about-farm__item-img">
+                <img src="./img/farm5.svg" alt="" class="about-farm__item-img">
                 <h4 class="about-farm__item-title">cried <strong>juices</strong></h4>
                 <i class="about-farm__item-text"><span>23</span> items</i>
               </li>
               <li class="about-farm__item">
-                <img src="./img/about3.svg" alt="" class="about-farm__item-img">
+                <img src="./img/farm6.svg" alt="" class="about-farm__item-img">
                 <h4 class="about-farm__item-title">organic <strong>tea</strong></h4>
                 <i class="about-farm__item-text"><span>23</span> items</i>
               </li>
             </ul>
-            <h5 class="about-farm__title">FRESH FROM OUR FARM</h5>
-            <h2 class="about-farm__title"><span>naturix</span> organic goods</h2>
+          </div>
+        </article>
+
+        <article class="goods-shop">
+          <div class="container">
+            <h5 class="goods-shop__title">FRESH FROM OUR FARM</h5>
+            <h2 class="goods-shop__title"><span>naturix</span> organic goods</h2>
           </div>
         </article>
       </section>
